[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Resources/Spine/muzzle_flash_01.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sound/pick_item.mp3" type="AudioStream" id=3]
[ext_resource path="res://Resources/Environmantal/CinemaLight/lightAround.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sound/guns_change.mp3" type="AudioStream" id=5]

[node name="Weapon" type="Position2D"]
script = ExtResource( 1 )

[node name="Fire_Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1, 1 )
texture = ExtResource( 2 )
offset = Vector2( 102, 4 )

[node name="ChagneWeapon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="WeaponAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2

[node name="PickItem" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 96, -1 )
texture = ExtResource( 4 )
